# RISCV_Simulator

./: BTB.cpp  BTB.h  BitOperation.cpp  BitOperation.h  CMakeLists.rtf  CMakeLists.txt  Execution.cpp  InstructionDecode.cpp  InstructionFetch.h  Memory.h  MemoryAccess.cpp  MemoryAccess.h  Pipeline.cpp  Pipeline.h  README.md  Register.h  WriteBack.cpp  WriteBack.h  main.cpp
riscv-testcases/testcases/: heart.c
src/: Execution.h  InstructionDecode.h  InstructionFetch.cpp  Memory.h  Register.h  main.cpp
